--- a/GoooodProject/MainWindow.xaml
+++ b/GoooodProject/MainWindow.xaml
@@ -33,9 +33,17 @@
             <Button Content="Удалить" Margin="10" Click="Delete_Click" Background="#FFC4C4" BorderBrush="#FF8080" BorderThickness="2" />
         </StackPanel>
         <Menu Height="25" VerticalAlignment="Top">
-            <MenuItem Header="Сохранить как">
-                <MenuItem Header="Excel" />
-                <MenuItem Header="JSON" Click="MenuItem_JSON_Click" />
+            <MenuItem Header="Сохранить как" BorderBrush="#FF0BF498" Height="25" Background="#FF7BE8B1">
+                <MenuItem Header="Excel" Click="MenuItem_Excel_Click" >
+                    <MenuItem.Icon>
+                        <Image Source="excel.jpg"></Image>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="JSON" Click="MenuItem_JSON_Click" >
+                    <MenuItem.Icon>
+                        <Image Source="json.jpg"></Image>
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
         </Menu>
     </Grid>
